--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/NUG30/MathML-HW1-template/blob/main/Assignment1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/NUG30/homework-1-Jeremyptq/blob/main/Assignment1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -237,7 +237,7 @@
         "B = np.array([[1, 2, 3],\n",
         "              [4, 5, 6]])\n",
         "\n",
-        "matrix_add_improved(A, B)"
+        "matrix_add_improved(A,"
       ],
       "execution_count": null,
       "outputs": [
