--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -44,7 +44,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -318,7 +318,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "EIe_enf3YVEx",
-        "outputId": "a63ac6f0-8d0d-4469-83af-5a71677523c5",
+        "outputId": "a3c72b46-99f9-49cf-eff0-efbaacea8aaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 346
@@ -327,7 +327,7 @@
       "source": [
         "# The program is much simpler using recursion, but I wrote this before knowing about it. \n",
         "# I tested both versions and surprisingly the multiplication takes a similar amount of time to perform.\n",
-        "# They are both extremely slow compared to numpy's matmul, which is to be expected since I've just naively copied the algorithm with no optimizations and the code's also garbage.\n",
+        "# They are both extremely slow compared to numpy's matmul, which is to be expected since I've just naively copied the algorithm with no optimization and the code's also garbage.\n",
         "\n",
         "\n",
         "def strassen_matmul(A_ori, B_ori):\n",
@@ -370,13 +370,13 @@
         "\n",
         "            if i == 0:\n",
         "                for j in range(7 ** (order - 1)):\n",
-        "                    M1 = A_directory[n][2 * j + 1][0] * B_directory[n][2 * j + 1][0]\n",
-        "                    M2 = A_directory[n][2 * j + 1][1] * B_directory[n][2 * j + 1][1]\n",
-        "                    M3 = A_directory[n][2 * j + 1][2] * B_directory[n][2 * j + 1][2]\n",
-        "                    M4 = A_directory[n][2 * j + 1][3] * B_directory[n][2 * j + 1][3]\n",
-        "                    M5 = A_directory[n][2 * j + 1][4] * B_directory[n][2 * j + 1][4]\n",
-        "                    M6 = A_directory[n][2 * j + 1][5] * B_directory[n][2 * j + 1][5]\n",
-        "                    M7 = A_directory[n][2 * j + 1][6] * B_directory[n][2 * j + 1][6]\n",
+        "                    M1 = A_strstack[n][2 * j + 1][0] * B_strstack[n][2 * j + 1][0]\n",
+        "                    M2 = A_strstack[n][2 * j + 1][1] * B_strstack[n][2 * j + 1][1]\n",
+        "                    M3 = A_strstack[n][2 * j + 1][2] * B_strstack[n][2 * j + 1][2]\n",
+        "                    M4 = A_strstack[n][2 * j + 1][3] * B_strstack[n][2 * j + 1][3]\n",
+        "                    M5 = A_strstack[n][2 * j + 1][4] * B_strstack[n][2 * j + 1][4]\n",
+        "                    M6 = A_strstack[n][2 * j + 1][5] * B_strstack[n][2 * j + 1][5]\n",
+        "                    M7 = A_strstack[n][2 * j + 1][6] * B_strstack[n][2 * j + 1][6]\n",
         "\n",
         "                    C11 = M1 + M4 - M5 + M7\n",
         "                    C12 = M3 + M5\n",
@@ -481,29 +481,29 @@
         "            check = False\n",
         "print(\"Results are equal :\", check)"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "With custom :\n",
-            "[[52811 50635 47189 ... 55447 52403 50515]\n",
-            " [51203 48457 48799 ... 54115 51292 49244]\n",
-            " [48434 47883 47082 ... 51285 48317 46388]\n",
+            "[[45772 49390 45751 ... 47903 49469 42140]\n",
+            " [44594 47579 43866 ... 47200 50871 42099]\n",
+            " [45987 48255 44397 ... 48487 47806 42674]\n",
             " ...\n",
-            " [47279 46922 45202 ... 49570 46077 48594]\n",
-            " [43470 43508 43437 ... 45789 43706 45162]\n",
-            " [50738 52229 48267 ... 54100 51702 52374]]\n",
-            "Time taken : 154.16976142999965\n",
+            " [43430 46103 43255 ... 46431 46233 41639]\n",
+            " [48110 49900 46044 ... 50170 49527 45549]\n",
+            " [42561 44959 44404 ... 44345 45602 40375]]\n",
+            "Time taken : 191.34394212600003\n",
             "With np.matmul :\n",
-            "[[52811 50635 47189 ... 55447 52403 50515]\n",
-            " [51203 48457 48799 ... 54115 51292 49244]\n",
-            " [48434 47883 47082 ... 51285 48317 46388]\n",
+            "[[45772 49390 45751 ... 47903 49469 42140]\n",
+            " [44594 47579 43866 ... 47200 50871 42099]\n",
+            " [45987 48255 44397 ... 48487 47806 42674]\n",
             " ...\n",
-            " [47279 46922 45202 ... 49570 46077 48594]\n",
-            " [43470 43508 43437 ... 45789 43706 45162]\n",
-            " [50738 52229 48267 ... 54100 51702 52374]]\n",
-            "Time taken : 0.0065668079996612505\n",
+            " [43430 46103 43255 ... 46431 46233 41639]\n",
+            " [48110 49900 46044 ... 50170 49527 45549]\n",
+            " [42561 44959 44404 ... 44345 45602 40375]]\n",
+            "Time taken : 0.006432980999989013\n",
             "Results are equal : True\n"
           ],
           "name": "stdout"
@@ -578,7 +578,7 @@
         "\n",
         "np.linalg.matrix_rank(A_rank2)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +618,7 @@
         "\n",
         "np.linalg.solve(A_rank2, B)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -677,7 +677,7 @@
         "# Test\n",
         "best_solution(A_rank2, B)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +826,7 @@
         "plt.plot(x, poly(x))\n",
         "plt.show()"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
