--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -44,7 +44,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -317,12 +317,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EIe_enf3YVEx",
-        "outputId": "a3c72b46-99f9-49cf-eff0-efbaacea8aaa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 346
-        }
+        "id": "EIe_enf3YVEx"
       },
       "source": [
         "# The program is much simpler using recursion, but I wrote this before knowing about it. \n",
@@ -438,72 +433,156 @@
         "                    strassen_split(A_directory[i][2*j + 1][k], B_directory[i][2*j + 1][k], i+1)\n",
         "\n",
         "    # Solution\n",
-        "    return strassen_stack(A_directory, B_directory, n)\n",
+        "    return strassen_stack(A_directory, B_directory, n)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DrUkpWvPdXwL"
+      },
+      "source": [
+        "#Improved version I tried to optimized. Time taken to perform the multiplication is on the same order as np.matmul for the most part, but still slower.\n",
+        "#Also done recursively. May be faster iteratively but this version is much simpler.\n",
+        "\n",
+        "import numpy as np\n",
+        "import math\n",
         "\n",
         "\n",
+        "def strassen_matmul_optimized(A_ori, B_ori):\n",
+        "\n",
+        "    matrix_dimensions = 4 * [None]\n",
+        "    matrix_dimensions[0] = A_ori.shape[0]\n",
+        "    matrix_dimensions[1] = A_ori.shape[1]\n",
+        "    matrix_dimensions[2] = B_ori.shape[0]\n",
+        "    matrix_dimensions[3] = B_ori.shape[1]\n",
+        "\n",
+        "    largest_dimension = matrix_dimensions[0]\n",
+        "    for i in range(3):\n",
+        "        if matrix_dimensions[i] < matrix_dimensions[i + 1]:\n",
+        "            largest_dimension = matrix_dimensions[i + 1]\n",
+        "\n",
+        "    #Determines padding size. \n",
+        "    #If gap between the largest dimension and the next 2^n is too large, pad to nearest multiple of some smaller 2^n\n",
+        "    #and multiply as 4x4 array. Improved performance noticeably.\n",
+        "    pad_size = 1; n = 0\n",
+        "    while pad_size < largest_dimension:\n",
+        "        n += 1\n",
+        "        pad_size = 2 ** n\n",
+        "    if pad_size - largest_dimension > 128:\n",
+        "        main_dim = 0; n = 0\n",
+        "        while main_dim < math.sqrt(largest_dimension):\n",
+        "            n += 1\n",
+        "            main_dim = 2 ** n\n",
+        "        pad_size  = int((pad_size / 2) + math.ceil((largest_dimension - (pad_size / 2)) / main_dim) * main_dim)\n",
+        "    else:\n",
+        "        main_dim = pad_size\n",
+        "\n",
+        "    #Padding\n",
+        "    A_new = np.pad(A_ori, ((0, pad_size - matrix_dimensions[0]), (0, pad_size - matrix_dimensions[1])), 'constant',\n",
+        "                                  constant_values = (0))\n",
+        "    B_new = np.pad(B_ori, ((0, pad_size - matrix_dimensions[2]), (0, pad_size - matrix_dimensions[3])), 'constant',\n",
+        "                                  constant_values = (0))\n",
+        "\n",
+        "    #Reshape into 4x4 array\n",
+        "    sub_dim = int(pad_size / main_dim)\n",
+        "    A_new_2 = np.swapaxes(np.reshape(A_new, (main_dim, sub_dim, main_dim, sub_dim)), 1, 2)\n",
+        "    B_new_2 = np.swapaxes(np.reshape(B_new, (main_dim, sub_dim, main_dim, sub_dim)), 1, 2)\n",
         "\n",
         "\n",
-        "# Test. This size takes about 3 minutes to execute.\n",
+        "    def strassen_alg(A_str, B_str, order):\n",
+        "\n",
+        "        #Uses naive multiplication for small matrices. Noticeably improved performance.\n",
+        "        #Also reshapes to 2x2 for solution output.\n",
+        "        if order <= 7:\n",
+        "            temp_dim = (2 ** order) * sub_dim\n",
+        "            A_str = np.reshape(np.swapaxes(A_str, 1, 2), (temp_dim, temp_dim))\n",
+        "            B_str = np.reshape(np.swapaxes(B_str, 1, 2), (temp_dim, temp_dim))\n",
+        "            return np.matmul(A_str, B_str)\n",
+        "\n",
+        "        #Strassen Algorithm\n",
+        "        else:\n",
+        "            (A11, A12) = np.hsplit(np.vsplit(A_str, 2)[0], 2)\n",
+        "            (A21, A22) = np.hsplit(np.vsplit(A_str, 2)[1], 2)\n",
+        "            (B11, B12) = np.hsplit(np.vsplit(B_str, 2)[0], 2)\n",
+        "            (B21, B22) = np.hsplit(np.vsplit(B_str, 2)[1], 2)\n",
+        "\n",
+        "            M1 = strassen_alg(A11 + A22, B11 + B22, order - 1)\n",
+        "            M2 = strassen_alg(A21 + A22, B11, order - 1)\n",
+        "            M3 = strassen_alg(A11, B12 - B22, order - 1)\n",
+        "            M4 = strassen_alg(A22, B21 - B11, order - 1)\n",
+        "            M5 = strassen_alg(A11 + A12, B22, order - 1)\n",
+        "            M6 = strassen_alg(A21 - A11, B11 + B12, order - 1)\n",
+        "            M7 = strassen_alg(A12 - A22, B21 + B22, order - 1)\n",
+        "\n",
+        "            C11 = M1 + M4 - M5 + M7\n",
+        "            C12 = M3 + M5\n",
+        "            C21 = M2 + M4\n",
+        "            C22 = M1 - M2 + M3 + M6\n",
+        "\n",
+        "            return np.vstack((np.hstack((C11, C12)), np.hstack((C21, C22))))\n",
+        "\n",
+        "\n",
+        "    return strassen_alg(A_new_2, B_new_2, n)[:matrix_dimensions[0],:matrix_dimensions[3]]"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qaluBG3CeFgw",
+        "outputId": "7122d11b-b3fb-46a5-9e3f-6b149b931757",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Test. Jupyter may not have enough memory for large matrices.\n",
+        "#Optimized version can compute 15k x15k multiplications in float in about a minute, though it's still slower than np.matmul.\n",
+        "\n",
         "import random\n",
         "from timeit import default_timer as timer\n",
         "\n",
-        "randomlist = []\n",
-        "for i in range(0, 150*200):\n",
-        "    n = random.randint(1,30)\n",
+        "for i in range(1):\n",
+        "  randomlist = []\n",
+        "  for i in range(0, 2000*2902):\n",
+        "    n = random.uniform(1,30)\n",
         "    randomlist.append(n)\n",
-        "A = np.reshape(randomlist,(150,200))\n",
+        "  A = np.reshape(randomlist,(2000,2902))\n",
+        "  randomlist = []\n",
+        "  for i in range(0, 2902*1880):\n",
+        "    n = random.uniform(1,30)\n",
+        "    randomlist.append(n)\n",
+        "  B = np.reshape(randomlist,(2902,1880))\n",
         "\n",
-        "randomlist2 = []\n",
-        "for i in range(0, 200*180):\n",
-        "    n = random.randint(1,30)\n",
-        "    randomlist2.append(n)\n",
-        "B = np.reshape(randomlist2,(200,180))\n",
+        "  start = timer()\n",
+        "  Strassen = strassen_matmul_optimized(A, B)\n",
+        "  end = timer()\n",
+        "  print(\"Time taken with Strassen :\", end - start)  \n",
         "\n",
-        "start = timer()\n",
-        "Strassen = strassen_matmul(A, B)\n",
-        "end = timer()\n",
-        "print(\"With custom :\")\n",
-        "print(Strassen)\n",
-        "print(\"Time taken :\", end-start)\n",
+        "  start = timer()\n",
+        "  Numpy = np.matmul(A,B)\n",
+        "  end = timer()\n",
+        "  print(\"Time taken with Numpy:\", end - start)\n",
         "\n",
-        "start = timer()\n",
-        "Numpy = np.matmul(A,B)\n",
-        "end = timer()\n",
-        "print(\"With np.matmul :\")\n",
-        "print(Numpy)\n",
-        "print(\"Time taken :\", end-start)\n",
-        "\n",
-        "bol = (Strassen == Numpy)\n",
-        "check = True\n",
-        "for i in range(np.shape(bol)[0]):\n",
+        "  bol = (np.round(Strassen,1) == np.round(Numpy,1))\n",
+        "  check = True\n",
+        "  for i in range(np.shape(bol)[0]):\n",
         "    for j in range(np.shape(bol)[1]):\n",
-        "        if bol[i][j] == False:\n",
-        "            check = False\n",
-        "print(\"Results are equal :\", check)"
+        "      if bol[i][j] == False:\n",
+        "          check = False\n",
+        "  print(\"Results are equal :\", check) "
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "With custom :\n",
-            "[[45772 49390 45751 ... 47903 49469 42140]\n",
-            " [44594 47579 43866 ... 47200 50871 42099]\n",
-            " [45987 48255 44397 ... 48487 47806 42674]\n",
-            " ...\n",
-            " [43430 46103 43255 ... 46431 46233 41639]\n",
-            " [48110 49900 46044 ... 50170 49527 45549]\n",
-            " [42561 44959 44404 ... 44345 45602 40375]]\n",
-            "Time taken : 191.34394212600003\n",
-            "With np.matmul :\n",
-            "[[45772 49390 45751 ... 47903 49469 42140]\n",
-            " [44594 47579 43866 ... 47200 50871 42099]\n",
-            " [45987 48255 44397 ... 48487 47806 42674]\n",
-            " ...\n",
-            " [43430 46103 43255 ... 46431 46233 41639]\n",
-            " [48110 49900 46044 ... 50170 49527 45549]\n",
-            " [42561 44959 44404 ... 44345 45602 40375]]\n",
-            "Time taken : 0.006432980999989013\n",
+            "Time taken with Strassen : 1.6921893530002308\n",
+            "Time taken with Numpy: 0.6589549219997934\n",
             "Results are equal : True\n"
           ],
           "name": "stdout"
