--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -534,13 +534,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "qaluBG3CeFgw",
-        "outputId": "7122d11b-b3fb-46a5-9e3f-6b149b931757",
+        "outputId": "e4818dab-a504-44c3-a9f6-8709341c20cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "#Test. Jupyter may not have enough memory for large matrices.\n",
+        "#Test.\n",
         "#Optimized version can compute 15k x15k multiplications in float in about a minute, though it's still slower than np.matmul.\n",
         "\n",
         "import random\n",
@@ -548,15 +548,15 @@
         "\n",
         "for i in range(1):\n",
         "  randomlist = []\n",
-        "  for i in range(0, 2000*2902):\n",
-        "    n = random.uniform(1,30)\n",
+        "  for i in range(0, 2000 * 2902):\n",
+        "    n = random.uniform(1, 30)\n",
         "    randomlist.append(n)\n",
-        "  A = np.reshape(randomlist,(2000,2902))\n",
+        "  A = np.reshape(randomlist, (2000, 2902))\n",
         "  randomlist = []\n",
-        "  for i in range(0, 2902*1880):\n",
-        "    n = random.uniform(1,30)\n",
+        "  for i in range(0, 2902 * 1880):\n",
+        "    n = random.uniform(1, 30)\n",
         "    randomlist.append(n)\n",
-        "  B = np.reshape(randomlist,(2902,1880))\n",
+        "  B = np.reshape(randomlist, (2902, 1880))\n",
         "\n",
         "  start = timer()\n",
         "  Strassen = strassen_matmul_optimized(A, B)\n",
@@ -568,22 +568,23 @@
         "  end = timer()\n",
         "  print(\"Time taken with Numpy:\", end - start)\n",
         "\n",
-        "  bol = (np.round(Strassen,1) == np.round(Numpy,1))\n",
+        "  decp = 1\n",
+        "  bol = (np.round(Strassen, decp) == np.round(Numpy, decp))\n",
         "  check = True\n",
         "  for i in range(np.shape(bol)[0]):\n",
         "    for j in range(np.shape(bol)[1]):\n",
         "      if bol[i][j] == False:\n",
         "          check = False\n",
-        "  print(\"Results are equal :\", check) "
+        "  print(\"Results are equal to {} decimal places :\".format(decp), check) "
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Time taken with Strassen : 1.6921893530002308\n",
-            "Time taken with Numpy: 0.6589549219997934\n",
-            "Results are equal : True\n"
+            "Time taken with Strassen : 1.5612616120001803\n",
+            "Time taken with Numpy: 0.6563453690000642\n",
+            "Results are equal to 1 decimal places : True\n"
           ],
           "name": "stdout"
         }
